// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TriggerForm EthWallet smoke 1`] = `
<Formik
  enableReinitialize={true}
  initialValues={
    Object {
      "channels": Array [
        "Telegram",
      ],
      "ethAddress": "some_custom_address",
      "frequencyTimeType": Object {
        "label": "Days",
        "value": "d",
      },
      "frequencyTimeValue": Object {
        "label": 1,
        "value": 1,
      },
      "frequencyType": Object {
        "disabledMetrics": Array [
          "daily_active_addresses",
        ],
        "label": "No more than once per",
        "value": "onceper",
      },
      "isRepeating": true,
      "metric": Object {
        "hidden": true,
        "label": "Historical balance",
        "value": "eth_wallet",
      },
      "percentThreshold": 200,
      "signalType": Object {
        "label": "Assets",
        "value": "assets",
      },
      "target": Object {
        "label": "nuga",
        "value": "nuga",
      },
      "threshold": "",
      "timeWindow": 24,
      "type": Object {
        "hidden": true,
        "label": "Historical balance",
        "value": "eth_wallet",
      },
    }
  }
  isInitialValid={true}
  onSubmit={[Function]}
  validate={[Function]}
  validateOnBlur={true}
  validateOnChange={true}
>
  <Component />
</Formik>
`;

exports[`TriggerForm smoke 1`] = `
<Formik
  enableReinitialize={true}
  initialValues={
    Object {
      "absoluteThreshold": 25,
      "channels": Array [
        "Telegram",
      ],
      "ethAddress": undefined,
      "frequencyTimeType": Object {
        "label": "Days",
        "value": "d",
      },
      "frequencyTimeValue": Object {
        "label": 1,
        "value": 1,
      },
      "frequencyType": Object {
        "disabledMetrics": Array [
          "daily_active_addresses",
        ],
        "label": "No more than once per",
        "value": "onceper",
      },
      "isRepeating": true,
      "metric": Object {
        "label": "Price",
        "value": "price",
      },
      "percentThreshold": 25,
      "signalType": Object {
        "label": "Assets",
        "value": "assets",
      },
      "target": Object {
        "label": "santiment",
        "value": "santiment",
      },
      "threshold": 0.002,
      "timeWindow": 1,
      "timeWindowUnit": Object {
        "label": "Days",
        "value": "d",
      },
      "type": Object {
        "label": "Moving up %",
        "metric": "price_percent_change",
        "value": "percent_up",
      },
    }
  }
  isInitialValid={true}
  onSubmit={[Function]}
  validate={[Function]}
  validateOnBlur={true}
  validateOnChange={true}
>
  <Component />
</Formik>
`;
